//
// Copyright 2018, TeamDev. All rights reserved.
//
// Redistribution and use in source and/or binary forms, with or without
// modification, must retain the above copyright notice and the following
// disclaimer.
//
// THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
// "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
// LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
// A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
// OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
// SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
// LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
// DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
// THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
// (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
// OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
//
syntax = "proto3";

package spine.client;

import "spine/options.proto";

option (type_url_prefix) = "type.spine.io";
option java_multiple_files = true;
option java_outer_classname = "QueryProto";
option java_package = "io.spine.client";

import "google/protobuf/any.proto";
import "google/protobuf/field_mask.proto";

import "spine/core/user_id.proto";
import "spine/core/actor_context.proto";
import "spine/core/response.proto";
import "spine/client/entities.proto";

// Query identifier.
//
message QueryId {

    // The value of the ID.
    //
    // Starts with the `q-` prefix followed by a generated UUID value.
    //
    string value = 1;
}

// An order for Query results.
//
message Order {
    
    // A direction of sorting for ordering the Query results.
    //
    Direction direction = 1 [(required) = true];

    // A column name which value is used for ordering the Query results. 
    //
    string column = 2;
    
    enum Direction {
        OD_UNKNOWN = 0;
        ASCENDING = 1;

        // An order in which every following value is less than the previous one.
        //
        // An example of collection sorted in a descending order is [2033, 2001, 1984] and 
        // ['NaCl', 'N2O', 'H2O2', 'H2O', 'C12H22O11'].
        //
        // The missing values are placed at the end of a collection in a descending order:
        // [1905, 1687, -280, null]
        //
        DESCENDING = 2;
    }
}

// Pagination parameters for Query results.
//
message Pagination {

    // An amount of entities to be returned by executing a Query.
    //
    // A minimum of 1 items per page can be requested.
    //
    uint64 page_size = 1 [(required) = true,
                          (min).value = "1"];
}

// Allows clients to form the requests to the read-side through the `QueryService`.
//
// `Query` execution typically results in a `QueryResponse` object.
//
message Query {

    // The ID of the query.
    //
    QueryId id = 1 [(required) = true];

    // Defines the entity of interest, e.g. entity type URL and a set of fetch criteria.
    //
    Target target = 2 [(required) = true,
                       (valid) = true,
                       (if_invalid).msg_format = "Invalid query target"];

    // Field mask to be applied to the items of the query result.
    //
    google.protobuf.FieldMask field_mask = 3;

    // Service information about the environment in which the query was created.
    //
    core.ActorContext context = 4 [(required) = true,
                                   (valid) = true,
                                   (if_invalid).msg_format = "Invalid actor context"];

    // An order for entities returned by the Query.
    //
    Order order = 5 [(valid) = true,
                     (if_invalid).msg_format = "Invalid pagination order"];

    // A specification for a way to paginate the Query results.
    //
    Pagination pagination = 6 [(valid) = true,
                               (goes).with = "order",
                               (if_invalid).msg_format = "Invalid query pagination"];

    // Reserved for utility fields required response timeframe etc.
    reserved 7 to 10;
}

// The result of `Query` processing.
//
// Contains the actual processing results and other response attributes.
// Used as a result of `QueryService.Read(Query)` gRPC method call.
//
message QueryResponse {

    // The base status part of the query processing response.
    // For example: whether the `Query` has been acked or not.
    //
    core.Response response = 1 [(required) = true];

    // Reserved for more query response attributes, e.g. to describe paginated response etc.
    reserved 2 to 4;

    //TODO:2017-02-20:alexander.yevsyukov: Use EntityRecord instead of Any.
    // Entity states (each packed as `Any`) returned to the API user as a result of Query execution.
    repeated google.protobuf.Any messages = 5;
}

// Enumeration of possible technical error reasons occurred in query validation.
enum QueryValidationError {

    // Reserved value.
    QVE_UNKNOWN_REASON = 0;

    // The query target is not supported by the server.
    UNSUPPORTED_QUERY_TARGET = 1;

    // The query message is invalid according to custom Protobuf options set.
    INVALID_QUERY = 2;
}
